fix: stop hiding undefined custom elements to avoid layout shifts

--- a/src/preset.scss
+++ b/src/preset.scss
@@ -1,4 +1,4 @@
-/*! Preset v1.0.0 | MIT License | https://github.com/Microflash/preset */
+/*! Preset v1.0.1 | MIT License | https://github.com/Microflash/preset */
 
 // 1. Remove default margin in all browsers
 // 2. Set `line-height` based on x-height of the font and `font-size` to automatically adjust for all `font-size` values
@@ -37,8 +37,8 @@ body {
 	tab-size: var(--preset-tab-size, 2); // 2
 }
 
-// Hide undefined custom elements and elements with `hidden` attribute
-:where(:not(:defined), [hidden]) {
+// Hide elements with `hidden` attribute
+:where([hidden]) {
 	display: none;
 }
 
